Update variable names

--- a/src/scss/layout/_general.scss
+++ b/src/scss/layout/_general.scss
@@ -1,7 +1,7 @@
 // layout general
 body {
   font-family: $sans;
-  background-color: $super-light-gray;
+  background-color: $extra-light-gray;
   // top padding for fixed header
   padding-top: 140px;
 }
