--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -5,19 +5,19 @@ $lime-green: #32CD32;
 $forest-green: #228B22;
 $medium-blue: #0000CD;
 $navy: #000080;
-$super-light-gray: #EAEAEA;
+$extra-light-gray: #EAEAEA;
 $light-gray: #D3D3D3;
 $silver: #C0C0C0;
-$old-school-gray: #666666;
-$super-dark-gray: #2E2E2E;
+$medium-gray: #666666;
+$dark-gray: #2E2E2E;
 
 // functional color names
 $link-color: $medium-blue;
 $link-hover: lighten($link-color, 15%);
-$copy-color: $super-dark-gray;
-$page-bg-color: $super-light-gray;
-$header-bg-color: $super-dark-gray;
-$footer-bg-color: $super-dark-gray;
+$copy-color: $dark-gray;
+$page-bg-color: $extra-light-gray;
+$header-bg-color: $dark-gray;
+$footer-bg-color: $dark-gray;
 //$inverse-btn-hover: ...;
 //$main-nav-color: $light-gray;
 //$main-nav-hover: lighten($light-gray, 20%);
