Update color override function

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -17,7 +17,7 @@
     }
   }
   .cta {
-    @include alt($lime-green);
+    @include cta-color-override(#fff, $dark-gray);
   }
 }
 // nav toggle button and mobile only adjustments
