--- a/src/scss/config/_mixins.scss
+++ b/src/scss/config/_mixins.scss
@@ -24,13 +24,15 @@
     clear: both;
   }
 }
-@mixin alt($color) {
-  background-color: $color;
-  border-color: $color;
+@mixin cta-color-override($txt-color, $bg-color) {
+  color: $txt-color;
+  background-color: $bg-color;
+  border-color: $bg-color;
   &:hover,
   &:focus {
-    background-color: lighten($color, 5%);
-    border-color: lighten($color, 5%);
+    color: $txt-color;
+    background-color: lighten($bg-color, 5%);
+    border-color: lighten($bg-color, 5%);
   }
 }
 @mixin img-responsive {
