Add container width variable

--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -32,3 +32,5 @@ $sans-custom: "Open Sans";
 
 $sans: $sans-custom, $sans-default;
 //$serif: $serif-custom, $serif-default;
+
+$max-container-width: 1200px;
