--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -10,6 +10,7 @@ $light-gray: #D3D3D3;
 $silver: #C0C0C0;
 $medium-gray: #666666;
 $dark-gray: #2E2E2E;
+$extra-dark-gray: #1E1E1E;
 
 // functional color names
 $link-color: $medium-blue;
