Move fixed header styles into separate partial

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,4 +10,5 @@
 @import "base/defaults";
 @import "layout/bootstrap-overrides";
 @import "layout/general";
+@import "layout/header-fixed";
 @import "layout/navigation";
