Add site footer class

--- a/src/scss/layout/_general.scss
+++ b/src/scss/layout/_general.scss
@@ -15,3 +15,9 @@ body {
   padding-bottom: 1em;
   background-color: #fff;
 }
+.site-footer {
+  padding-top: 1.6em;
+  padding-bottom: 1em;
+  color: $dark-gray;
+  background-color: #fff;
+}
