--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -23,6 +23,10 @@ $footer-bg-color: $dark-gray;
 //$main-nav-color: $light-gray;
 //$main-nav-hover: lighten($light-gray, 20%);
 $accent: $lime-green;
+$cta-txt-color: #FFF;
+$cta-bg-color: $dark-gray;
+$cta-inverse-txt-color: $dark-gray;
+$cta-inverse-border-color: $dark-gray;
 
 // type
 $sans-default: "Helvetica Neue", Helvetica, Arial, sans-serif;
