--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,6 +1,7 @@
 // buttons
 .cta,
 .cta-inverse {
+  display: inline-block;
   padding: .7em 1em;
   font-weight: 600;
   text-transform: uppercase;
