Button and mixin adjustments

--- a/src/scss/config/_mixins.scss
+++ b/src/scss/config/_mixins.scss
@@ -33,10 +33,36 @@
   color: $txt-color;
   background-color: $bg-color;
   border-color: $bg-color;
+  .fa {
+    color: rgba($txt-color,.6);
+  }
   &:hover,
   &:focus {
-    color: $txt-color;
     background-color: lighten($bg-color, 5%);
     border-color: lighten($bg-color, 5%);
+    .fa {
+      color: rgba($txt-color,.7);
+    }
   }
+}
+@mixin cta-inv-color-override($txt-color, $bdr-color) {
+  color: $txt-color;
+  border-color: $bdr-color;
+  .fa {
+    color: rgba($txt-color,.6);
+  }
+  &:hover,
+  &:focus {
+    color: lighten($txt-color, 5%);
+    border-color: lighten($bdr-color, 5%);
+    .fa {
+      color: rgba($txt-color,.7);
+    }
+  }
+}
+@mixin hero-bg-img($img-url) {
+  background-image: url($img-url);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
