--- a/src/scss/config/_mixins.scss
+++ b/src/scss/config/_mixins.scss
@@ -38,6 +38,7 @@
   }
   &:hover,
   &:focus {
+    color: $txt-color;
     background-color: lighten($bg-color, 5%);
     border-color: lighten($bg-color, 5%);
     .fa {
