Lowercase hex values

--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -1,16 +1,16 @@
 // various color names
-$magenta: #FF00FF;
-$lime: #00FF00;
-$lime-green: #32CD32;
-$forest-green: #228B22;
-$medium-blue: #0000CD;
+$magenta: #ff00ff;
+$lime: #00ff00;
+$lime-green: #32cd32;
+$forest-green: #228b22;
+$medium-blue: #0000cd;
 $navy: #000080;
-$extra-light-gray: #EAEAEA;
-$light-gray: #D3D3D3;
-$silver: #C0C0C0;
+$extra-light-gray: #eaeaea;
+$light-gray: #d3d3d3;
+$silver: #c0c0c0;
 $medium-gray: #666666;
-$dark-gray: #2E2E2E;
-$extra-dark-gray: #1E1E1E;
+$dark-gray: #2e2e2e;
+$extra-dark-gray: #1e1e1e;
 
 // functional color names
 $accent: $lime-green;
@@ -24,7 +24,7 @@ $footer-bg-color: $dark-gray;
 $main-nav-color: $dark-gray;
 //$main-nav-hover: lighten($main-nav-color, 20%);
 //$main-nav-hover: $accent;
-$cta-txt-color: #FFF;
+$cta-txt-color: #fff;
 $cta-bg-color: $dark-gray;
 $cta-inverse-txt-color: $dark-gray;
 $cta-inverse-border-color: $dark-gray;
