Add full width and example classes

--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -28,6 +28,9 @@ $cta-txt-color: #fff;
 $cta-bg-color: $dark-gray;
 $cta-inverse-txt-color: $dark-gray;
 $cta-inverse-border-color: $dark-gray;
+$fw-primary-bg: #fff;
+$fw-alt-bg: $light-gray;
+$fw-highlight-bg: $accent;
 
 // type
 $sans-default: "Helvetica Neue", Helvetica, Arial, sans-serif;
