--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,4 +14,5 @@
 @import "layout/navigation";
 @import "components/buttons";
 @import "components/hero";
-//@import "pages/example";
+@import "components/full-width";
+@import "pages/example";
