--- a/src/scss/pages/_example.scss
+++ b/src/scss/pages/_example.scss
@@ -17,3 +17,27 @@
     @include cta-inv-color-override(white, $accent);
   }
 }
+// mobile
+@media screen and (max-width: 500px) {
+  .example .hero {
+    padding-top: 3.5em;
+    min-height: 350px;
+  }
+}
+// full-width sections
+.fw-primary,
+.fw-alt,
+.fw-highlight {
+  h2 {
+    font-size: 20px;
+    font-weight: 700;
+  }
+  p {
+    font-size: 16px;
+  }
+}
+.fw-highlight {
+  h2 {
+    font-weight: 500;
+  }
+}
