--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,5 +1,4 @@
-.hero,
-.full-width {
+.hero {
   width: 100%;
   height: auto;
 }
@@ -7,4 +6,10 @@
   padding-top: 8em;
   min-height: 400px;
   background-color: $light-gray;
+}
+// use to change width inside hero
+.hero-inner {
+  margin-left: auto;
+  margin-right: auto;
+  //max-width: 80%;
 }
