--- a/src/scss/layout/_general.scss
+++ b/src/scss/layout/_general.scss
@@ -21,3 +21,9 @@ body {
   color: $dark-gray;
   background-color: #fff;
 }
+// use to manage the width inside a container
+.wrap-inner {
+  margin-left: auto;
+  margin-right: auto;
+  //max-width: 80%;
+}
