--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -18,8 +18,8 @@ $link-color: $medium-blue;
 $link-hover: lighten($link-color, 15%);
 $copy-color: $dark-gray;
 $page-bg-color: $extra-light-gray;
-$header-bg-color: $dark-gray;
-$footer-bg-color: $dark-gray;
+$header-bg-color: #fff;
+$footer-bg-color: #fff;
 //$inverse-btn-hover: ...;
 $main-nav-color: $dark-gray;
 //$main-nav-hover: lighten($main-nav-color, 20%);
