Add pointer cursor to mobile nav toggle

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -34,6 +34,7 @@
     display: block;
     width: 5em;
     text-align: center;
+    cursor: pointer;
   }
   .nav-toggle-text {
     display: inline-block;
