--- a/src/scss/layout/_general.scss
+++ b/src/scss/layout/_general.scss
@@ -7,8 +7,8 @@ body {
   max-width: $max-container-width;
 }
 .logo {
-  width: 75px;
-  height: 110px;
+  width: 220px;
+  height: auto;
 }
 .site-header {
   padding-top: 1em;
