Move header styles to partial

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 
 @import "layout/bootstrap-overrides";
 @import "layout/general";
+@import "layout/header";
 @import "layout/header-fixed";
 @import "layout/navigation";
 
