--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,12 +4,17 @@
   background-color: $header-bg-color;
 
   .brand {
+    margin: 0;
+    padding: 0;
+  }
+  // text only styles for .brand, no logo
+  /* .brand {
     font-size: 36px;
     font-weight: bold;
     letter-spacing: -.04em;
     text-transform: uppercase;
     @include link-color($dark-gray, $accent);
-  }
+  } */
   .logo {
     width: 220px;
     height: auto;
