--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -4,7 +4,7 @@
     text-align: center;
   }
   li {
-    padding-top: 3em;
+    padding-top: 2.25em;
     font-size: 13px;
     font-weight: 600;
     text-transform: uppercase;
@@ -18,18 +18,12 @@
       text-decoration: none;
     }
   }
-  //.cta {
-  //  @include cta-color-override(#fff, $dark-gray);
-  //}
-  //.cta-inverse {
-  //  @include cta-inv-color-override($dark-gray, $dark-gray);
-  //}
 }
 // nav toggle button and mobile only adjustments
 @media (max-width: 767px) {
   .nav-toggle {
     position: absolute;
-    top: 3.4em;
+    top: 2.25em;
     right: 1em;
     display: block;
     width: 5em;
@@ -45,18 +39,13 @@
   .nav-toggle .fa-bars {
     display: inline-block;
   }
-  .main-navigation li {
-    &:first-of-type {
-      padding-top: 1em;
-    }
-  }
   .main-navigation ul {
-    margin-bottom: 3em;
+    margin-bottom: 1.5em;
   }
 }
 // tablet and up, header & nav styles
 @media screen and (min-width: 768px) {
-  .logo {
+  .brand {
     float: left;
   }
   .nav-toggle {
@@ -66,9 +55,10 @@
     float: right;
     ul {
       @include list-inline;
+      margin-bottom: 0;
     }
     li {
-      padding-top: 3.5em;
+      padding-top: 0;
     }
   }
 }
