--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -20,10 +20,8 @@ $copy-color: $dark-gray;
 $page-bg-color: $extra-light-gray;
 $header-bg-color: #fff;
 $footer-bg-color: #fff;
-//$inverse-btn-hover: ...;
 $main-nav-color: $dark-gray;
-//$main-nav-hover: lighten($main-nav-color, 20%);
-//$main-nav-hover: $accent;
+$main-nav-hover: lighten($main-nav-color, 10%);
 $cta-txt-color: #fff;
 $cta-bg-color: $dark-gray;
 $cta-inverse-txt-color: $dark-gray;
