--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,20 +4,23 @@
 
 */
 
-@import "config/fonts";
-@import "config/variables";
-@import "config/mixins";
-
+@import "variables";
+//@import "vendor/normalize"; -- in Bootstrap (now reboot)
+@import "mixins/mixins";
 @import "base/defaults";
-
-@import "layout/bootstrap-overrides";
-@import "layout/general";
-@import "layout/header";
-@import "layout/header-fixed";
-@import "layout/navigation";
-
+//@import "base/type"; -- Bootstrap
+//@import "base/forms"; -- Bootstrap
+@import "components/containers";
+//@import "components/skiplink"; -- Bootstrap
+@import "components/header";
+@import "components/header-fixed";
+@import "components/navigation";
 @import "components/buttons";
 @import "components/hero";
 @import "components/full-width";
+//@import 'components/grid'; -- Bootstrap
+//@import "...utility/other classes...";
+//@import "...theme styles...";
 
+// further customizations/page styles
 @import "pages/home";
