--- a/src/scss/components/_full-width.scss
+++ b/src/scss/components/_full-width.scss
@@ -1,4 +1,6 @@
-// full width patterns
+// full width container
+// can be used to wrap .container-fluid if you set a max-width on .container-fluid
+// or as an alternate full width container
 .full-width {
   width: 100%;
   height: auto;
