--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 //@import "components/skiplink"; -- Bootstrap
 @import "components/header";
 @import "components/header-fixed";
+@import "components/footer";
 @import "components/navigation";
 @import "components/buttons";
 @import "components/hero";
