--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -21,9 +21,11 @@ $accent: $lime-green;
 $link-color: $medium-blue;
 $link-hover: lighten($link-color, 15%);
 $copy-color: $dark-gray;
+$heading-color: $dark-gray;
 $page-bg-color: $extra-light-gray;
 $header-bg-color: #fff;
 $footer-bg-color: #fff;
+$footer-txt-color: $copy-color;
 $main-nav-color: $dark-gray;
 $main-nav-hover: lighten($main-nav-color, 10%);
 $cta-txt-color: #fff;
